Closed Bug 1253571 Opened 8 years ago Closed 8 years ago

MozMtpDatabase.cpp:817:3: error: 'ScopedDeletePtr' was not declared in this scope

Categories

(Firefox OS Graveyard :: GonkIntegration, defect)

ARM
Gonk (Firefox OS)
defect
Not set
normal

Tracking

(firefox47 fixed)

RESOLVED FIXED
Tracking Status
firefox47 --- fixed

People

(Reporter: gwagner, Assigned: gsvelto)

References

Details

Attachments

(1 file)

      No description provided.
Blocks: 1251723, 1245091
Taking this.
Assignee: nobody → gsvelto
Status: NEW → ASSIGNED
Bug 1252902 broke a bunch of stuff in HAL too; I'm also fixing that in this bug.
This patch uses UniquePtr and UniqueFreePtr to replace the remaining instances of ScopedDeletePtr and ScopedFreePtr.
Attachment #8726720 - Flags: review?(dhylands)
Comment on attachment 8726720 [details] [diff] [review]
[PATCH] Remove the remaining uses of ScopedDeletePtr and ScopedFreePtr from the HAL and MTP code

Review of attachment 8726720 [details] [diff] [review]:
-----------------------------------------------------------------

lgtm
Attachment #8726720 - Flags: review?(dhylands) → review+
Thanks for the quick review Dave. Try run is here: https://treeherder.mozilla.org/#/jobs?repo=try&revision=8b756b4421ec

Will land on inbound as soon as it gets re-opened.
https://hg.mozilla.org/mozilla-central/rev/3f727688f71f
Status: ASSIGNED → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.