Bug 1253571 - Remove the remaining uses of ScopedDeletePtr and ScopedFreePtr from the HAL and MTP code r=dhylands